tests/suite/fail/generated/stderr/golden_use_after_move.ny
fn main() {
    let s = "moved"
    let t = s
    print(s) //~ ERROR was moved
}
